--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,11 @@
 
 .App-logo {
   height: 40vmin;
+  
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #201747;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
